--- a/example/package.json
+++ b/example/package.json
@@ -4,8 +4,10 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "mysql": "^2.14.0",
+    "x2node-common": "^1.3.3",
     "x2node-dbos": "^1.0.6",
     "x2node-records": "^2.2.5",
+    "x2node-validators": "^1.2.2",
     "x2node-ws": "^1.1.2",
     "x2node-ws-resources": "^1.2.1"
   }
