Work in progress.

--- a/example/.env-example
+++ b/example/.env-example
@@ -10,3 +10,8 @@ DB_HOST=localhost
 DB_NAME=x2tutorial
 DB_USER=x2tutorial
 DB_PASSWORD=x2tutorial
+
+#
+# Secret key.
+#
+SECRET=hKiY0xP600FHbgQS2y14F7ckqbfai99AZwF6hYvW0lM=
