--- a/example/package.json
+++ b/example/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "dependencies": {
     "dotenv": "^4.0.0",
+    "jws": "^3.1.4",
     "mysql": "^2.14.0",
     "x2node-common": "^1.3.3",
     "x2node-dbos": "^1.0.6",
     "x2node-records": "^2.2.5",
     "x2node-validators": "^1.2.2",
     "x2node-ws": "^1.1.2",
+    "x2node-ws-auth-jwt": "^1.1.3",
     "x2node-ws-resources": "^1.2.1"
   }
 }
