Work in progress.

--- a/example/.env-example
+++ b/example/.env-example
@@ -15,3 +15,8 @@ DB_PASSWORD=x2tutorial
 # Secret key.
 #
 SECRET=hKiY0xP600FHbgQS2y14F7ckqbfai99AZwF6hYvW0lM=
+
+#
+# Admin password.
+#
+ADMIN_PASSWORD=DontTellAnybody
