--- a/example/.env-example
+++ b/example/.env-example
@@ -1,3 +1,7 @@
+##################################################
+# Copy this file to .env and modify accordingly. #
+##################################################
+
 #
 # Port, on which our web-service will be listening.
 #
