--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gulp-add-src": "^0.2.0",
     "gulp-clean-css": "^3.7.0",
     "gulp-concat": "^2.6.1",
+    "gulp-live-server": "0.0.31",
     "gulp-load-plugins": "^1.5.0",
     "gulp-marked": "^1.0.0",
     "gulp-rename": "^1.2.2",
